--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   analyzer: ^3.4.1
   build_runner: ^2.1.8
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^4.0.5
   flutter:
     sdk: flutter
