--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   build_runner: ^2.1.8
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
+  data_connection_checker: ^0.3.4
   dio: ^4.0.5
   flutter:
     sdk: flutter
