--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   retrofit: ^3.0.1+1
   retrofit_generator: ^4.0.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_lints: ^1.0.0
