--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   data_connection_checker: ^0.3.4
+  device_info: ^2.0.3
   dio: ^4.0.5
   flutter:
     sdk: flutter
