--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.0.3
   freezed: ^1.1.1
+  get_it: ^7.2.0
   json_serializable: ^6.1.5
   pretty_dio_logger: ^1.1.1
   retrofit: ^3.0.1+1
