--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed: ^1.1.1
   get_it: ^7.2.0
   json_serializable: ^6.1.5
+  lottie: ^1.2.2
   pretty_dio_logger: ^1.1.1
   retrofit: ^3.0.1+1
   retrofit_generator: ^4.0.1
